Произведен масштабный рефакторинг кода. * Все Factory заменены на Mapper, т.к. это более информативно для случаев, написанных в "Фабриках" * Группировка в domain происходит для конкретных сущностей, туда входят Entity, DTO и Mapper * Убран StateService из-за его ненедобности. Сервис нужен в случаях, когда состояние зависит от каких либо случаев (например расчеты). В нашем же случае у нас доволно таки линейная логика * Убраны реализации сервисов UserOrderService и CarWashOrderService, их реализация перенесена в OrderServiceImpl * Исключен лишний код для маппинга списка в строку и наоборот в REST контроллерах * Обновлены Java Doc